Avoid wrap of footer links on small displays

--- a/_sass/_layout-overrides.scss
+++ b/_sass/_layout-overrides.scss
@@ -34,6 +34,8 @@
 
 @include media-query($on-palm) {
     .footer-col {
+        width: -webkit-calc(100% - (#{$spacing-unit} / 2));
+        width:         calc(100% - (#{$spacing-unit} / 2));
         text-align: initial;
     }
 }
